2010-02-08 Borut Razem <borut.razem AT siol.net>

	* src/avr/gen.c, src/avr/gen.h, src/cdbFile.c, src/ds390/gen.c,
	  src/ds390/gen.h, src/hc08/gen.c, src/hc08/gen.h, src/mcs51/gen.c,
	  src/mcs51/gen.h, src/mcs51/main.c, src/pic16/gen.c, src/pic16/gen.h,
	  src/pic16/main.c, src/pic/gen.c, src/pic/gen.h, src/port.h,
	  src/SDCCBBlock.c, src/SDCCdebug.c, src/SDCCdebug.h, src/SDCCdwarf2.c,
	  src/SDCCdwarf2.h, src/SDCCglobl.h, src/SDCCglue.c, src/SDCCmain.c,
	  src/xa51/gen.c, src/xa51/gen.h, src/xa51/main.c, src/z80/gen.c,
	  src/z80/gen.h, src/z80/main.c:
	  get rid of scratchFileName, const string pointers
	* src/SDCCmain.c, src/xa51/main.c, src/mcs51/main.c, sdcc_vc_in.h:
	  fixed bug #2947712: SDCC completely broken in multiple ways
	* sdas/linksrc/lklist.c, sdas/linksrc/lkmain.c:
	  reintroduced gameboy map file format, required by rrgb simulator,
	  reenabled gameboy regression tests

2010-02-07 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added rules 272.x helping literal left shifts

2010-02-07 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/SDCCglobl.h, src/z80/main.c, src/hc08/main.c,
	  sdas/linksrc/lkmain.c, sdas/linksrc/lkar.c, sdas/linksrc/lkrloc.c:
	  fixed output file format handling
	* src/SDCCmain.c, src/port.h, src/xa51/main.c, src/mcs51/main.c,
	  src/z80/main.c, src/ds390/main.c, src/hc08/main.c:
	  list of standard library files moved to port structure,
	  defined for each target
	* sdas/linksrc/lkmain.c: re-added the gb version of map()

2010-02-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_setjmp.c: fixed --stack-auto for model-huge
	* support/regression/Makefile.in: keep the hex-file

2010-02-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/mappings.i,
	  src/z80/peeph-z80.def:
	  Decompose multiline macros, fixing #1570701, #1921731.

2010-02-04 Borut Razem <borut.razem AT siol.net>

	* src/mcs51/main.c, src/z80/main.c, src/ds390/main.c, src/hc08/main.c,